Windows: QWindowsPrintDevice::printableMargins avoids leaking the DC

MSDN says if the DC was created by calling CreateDC, it must be freed
by DeleteDC not ReleaseDC.

Task-number: QTBUG-41941
Change-Id: I4c60b5d2587f1c4d3332fce74224cbc8b756eb2a
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>